Added updated templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,13 @@
 
 <link rel="stylesheet" type = "text/css" href="myCSS.css">
 
+
+<!--  
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+-->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         
 <script>
@@ -47,8 +51,13 @@
       document.getElementById("doUpdateButton").style.display="block";
       document.getElementById("updateLabel").style.display="inline";// note display = inline
       var rowElement = buttonElement.parentNode.parentNode;
-      var item = getItemFromRow(rowElement);
+      id = rowElement.cells[0].firstChild.textContent;
+      // var item = getItemFromRow(rowElement);
+      console.log("Item id is: " + id)
+      item = getItem(id)
+      console.log("back in showUpdate")
       console.log(item);
+      console.log("Calling populateFormWithItem")
       populateFormWithItem(item);
     }
 
@@ -75,13 +84,17 @@
       document.getElementById("createLabel").style = "display:none";
     }
 
+  function doUpdate()
+  {
+
+  }
+
   function showViewAll()
     {
       // Show Create button and table
+      document.getElementById("createUpdateForm").style.display="none";
       document.getElementById("showCreateButton").style.display="block";
       document.getElementById("stockTable").style.display="block";
-      // Show update form
-      document.getElementById("createUpdateForm").style.display="none";
     }
 
   function clearForm()
@@ -89,11 +102,14 @@
       //clears data in the form
       // uses querySelector to find the inputs
       var form = document.getElementById("createUpdateForm");
-      form.querySelector('input[name="reg"]').disabled = false;
-      form.querySelector('input[name="reg"]').value = '';
-      form.querySelector('select[name="make"]').value = '';
-      form.querySelector('input[name="model"]').value = '';
-      form.querySelector('input[name="price"]').value = '';
+      form.querySelector('input[name="id"]').value = false;
+      form.querySelector('select[name="Type"]').value = '';
+      form.querySelector('input[name="Title"]').value = '';
+      form.querySelector('input[name="Artist_Author"]').value = '';
+      form.querySelector('input[name="Genre"]').value = '';
+      form.querySelector('input[name="Quantity"]').value = '';
+      form.querySelector('input[name="Price"]').value = '';
+      form.querySelector('input[name="Discogs_GoodReadsID"]').value = '';
     }
 
   function addItemToTable(item)
@@ -111,18 +127,20 @@
       cell2.innerHTML = item.Title;
       var cell3 = rowElement.insertCell(3);
       cell3.innerHTML = item.Artist_Author;
+      /*
       var cell4 = rowElement.insertCell(4);
       cell4.innerHTML = item.Genre;
       var cell5 = rowElement.insertCell(5);
       cell5.innerHTML = item.Quantity;
       var cell6 = rowElement.insertCell(6);
       cell6.innerHTML = item.Price;
-      var cell7 = rowElement.insertCell(7);
-      cell7.innerHTML = item.Discogs_GoodReadsID;
+      */
+      var cell7 = rowElement.insertCell(4);
+      cell7.innerHTML = '<button onClick = "">View More Info</button>';;
       // add buttons to the row
-      var cell8 = rowElement.insertCell(8);
+      var cell8 = rowElement.insertCell(5);
       cell8.innerHTML = '<button onClick = "showUpdate(this)">Update</button>';
-      var cell9 = rowElement.insertCell(9);
+      var cell9 = rowElement.insertCell(6);
       cell9.innerHTML = '<button onClick = "deleteItem(this)">Delete</button>';
       rowElement.setAttribute('id', item.id);
     }
@@ -130,27 +148,33 @@
   function getItemFromRow(rowElement)
     {
       // does what it says, in response to update button been pressed
-      var item ={};
+      // var item ={};
+      id = rowElement.cells[0].firstChild.textContent;
+      /*
+      // original code
       item.id = rowElement.cells[0].firstChild.textContent;
       item.Type = rowElement.cells[1].firstChild.textContent;
       item.Title = rowElement.cells[2].firstChild.textContent;
       item.Artist_Author = rowElement.cells[3].firstChild.textContent;
+      
       item.Genre = rowElement.cells[4].firstChild.textContent;
       item.Quantity = rowElement.cells[5].firstChild.textContent;
       item.Price = rowElement.cells[6].firstChild.textContent;
       item.Discogs_GoodReadsID = rowElement.cells[7].firstChild.textContent;
-      return item;
-      console.log(item);
+      */
+      console.log(item);      
+      return;
     }
 
   function populateFormWithItem(item)
     {
-      console.log("populateFormWithItem called" + item.id);
       var form = document.getElementById("createUpdateForm");
-      form.querySelector('input[name = "id"]').disabled = true;
+      form.querySelector('input[name = "id"]').value = item.id;
+      // form.querySelector('input[name = "id"]').disabled = true;
       form.querySelector('select[name = "Type"]').value = item.Type;
       form.querySelector('input[name = "Title"]').value = item.Title;
       form.querySelector('input[name = "Artist_Author"]').value = item.Artist_Author;
+      
       form.querySelector('input[name = "Genre"]').value = item.Genre;
       form.querySelector('input[name = "Quantity"]').value = item.Quantity;
       form.querySelector('input[name = "Price"]').value = item.Price;
@@ -188,13 +212,12 @@
         "dataType": "JSON",
         "success":function(stock)
           {
-            // console.log(stock);
-            // return();
-            // populateTable(item);
+
+
             $("#stockTableBody").empty(); // To clear contents of table body
             for (item of stock)
               {
-              console.log(item);
+              // console.log(item);
               addItemToTable(item);
               }
           },
@@ -202,6 +225,28 @@
           }
         });
       }
+
+      function getItem(id){
+      // This function gets a single item
+      host = window.location.origin
+      console.log("getItem called");
+      $.ajax({    
+        "url": host + "/stock/" + id,
+        "method":"GET",
+        "data":"",
+        "dataType": "JSON",
+        "success":function(item)
+          {
+          console.log(item);
+          console.log("returning to ...");
+          populateFormWithItem(item);
+          return;
+          },
+            "error":function(xhr,status,error){console.log("error: "+status+" msg:"+error);
+          }
+        });
+      }
+
 
   function createItem(item){
     host = window.location.origin
@@ -214,6 +259,7 @@
     "success":function(result)
         {
           console.log(result);
+          return
         },
           "error":function(xhr,status,error){console.log("error: "+status+" msg:"+error);
         }
@@ -226,22 +272,22 @@
     var rowElement = document.getElementById(item.id);
     // console.log(item["id"]);
     $.ajax({
-      "url": host + "/stock/"+encodeURI(item.id),
+      "url": host + "/stock/"+ item["id"],
       "method":"PUT",
-      // "data":JSON.stringify(item),
-      "data":item,
+      "data":JSON.stringify(item),
+      // "data":item,
       "dataType": "JSON",
       contentType: "application/json; charset=utf-8",
       "success":function(result)
         {
-          console.log(result);
+          // console.log(result);
           // document.getElementById("output").innerText = JSON.stringify(result);
           clearForm();
           showViewAll();
           document.getElementById("doUpdateButton").style = "display:none";
           document.getElementById("updateLabel").style = "display:none";
           // redraw table with updated item array
-          getall();
+          getall()
         },
         "error":function(xhr,status,error){
           console.log("error: "+status+" msg:"+error);
@@ -280,10 +326,11 @@
 <h1>Not-so secret Book and Music Store</h1>
   <div class = "menu">
     <ul>
-      <li>Home</li>
-      <li>View all Stock Items</li>
-      <li>View Books</li>
-      <li>View CDS/LPs</li>
+      <li><a href ="/">Home</a></li>
+      <li><a href ="/logout">Logout</a></li>
+      <li><a id = "showCreateButton" onClick ="showCreate()" href="#">Add New Item</a></li>
+	<li>You are logged in as {{user}}</li>
+
     </ul>
   </div>
 </div>
@@ -298,10 +345,12 @@
         <th>Type (Format)</th> 
         <th>Title</th>
         <th>Artist or Author(s)</th> <!-- could this be Artits or Author depending whether books or music is selected?-->
+        <!-- 
         <th>Genre</th>
         <th>Quantity in Stock</th>
         <th>Price per Unit</th>
-        <th>Discogs/GoodReadsID</th> <!-- This could be hidden-->
+        -->
+        <th>More Information</th> <!-- This could be hidden-->
         <th>Update Item Details</th> <!-- Prefer is this were not HTML buttons-->
         <th>Delete Item fom Stock</th> <!-- Prefer is this were not HTML buttons-->
       </tr>
@@ -316,10 +365,9 @@
 <h2><span id = "createLabel" style = "display: none">Add Item To Stock List</span><span id ="updateLabel" style ="display:none" >Edit Item Details</span></h2>
 
 <div class = "form-group"  id ="createUpdateForm" style="display: none">
-    <form id = "form">
-    <fieldset>
+    
     <!-- The following to be visible only when update button is called -->  
-    <input type = "hidden" class = "form-control" type ="text" name = "id" placeholder = "stock ID number"/><br>  
+    <input class = "form-control" type ="text" name = "id" placeholder = "stock ID number"/><br>  
     <select class = "form-control" name = "Type" required>
           <option value = "">Select Type of item you wish to add from the drop down options:</option>
           <option value = "Book">Book</option>
@@ -339,21 +387,11 @@
     <input class = "form-control" type = "text" name = "Quantity" placeholder = "Enter quantity of item to be added to stock" required><br>
     <input class = "form-control" type = "text" name = "Price" placeholder = "Enter unit price to be added to stock" required><br>
     <input class = "form-control" type = "text" name = "Discogs_GoodReadsID" placeholder = "Enter Discogs or GoodReads ID available (not required)"><br>
-    <!-- Moved Create/Update buttons into the form body to enable HTML form validation-->  
+</div>    
+      
     <span><button id = "doCreateButton" onClick = "doCreate()" style = "display:none">Create</button></span>
     <span><button id = "doUpdateButton" onClick = "updateItem()" style = "display:none">Update</button></span>
-    <!-- The following might be used to provide feedback if, say price or quantity are non numerical values-->
-      
-  
-  </fieldset>
-  </form>
-  </div>
-
-<div>
-  <button id = "showCreateButton" onClick ="showCreate()">Add New Item</button>
-</div>
-
-
+    
 <div class="footer">
   <p>Web layout adapted from <a href = "https://www.w3schools.com/css/css_rwd_intro.asp" target="_blank">w3Schools.com</a></p>
   <p>Designed for Web Applications Project, Spring 2019 and repurposed for Data Representaion Big Project, Autumn 2019</p>
